force-app/main/default/objects/custom_create72__c/custom_create72__c.object-meta.xml
<CustomObject>
    <label>Custom created object72</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects72</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>