force-app/main/default/objects/custom_create72__c/fields/custom_create_72field588__c.field-meta.xml
<CustomField>
    <fullName>custom_create_72field588__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 72field588</label>
    <type>Checkbox</type>
</CustomField>